frontend/test/should_pass/merge_model.gm
node class State {
	name : string;
}
