frontend/test/should_fail/index_count_model.gm
node class N
{
	i : double;
}

index fooi { N.i }

class O;